--- a/operatingSystems/2016csb1062_3/readme
+++ b/operatingSystems/2016csb1062_3/readme
@@ -14,14 +14,15 @@ Ex:
 ----------------------------------------
 
 Sample InputFormat:
-
 csv:
+Processes,Allocated,Requested,Available at time t1
 P1,"{1,0,1}","{0,1,1}","{0,0,1}"
 P2,"{1,1,0}","{1,0,0}"
 P3,"{0,1,0}","{0,0,1}"
 p4,"{0,1,0}","{1,2,0}"
 
 tsv:
+Processes	Allocated	Requested	Available at time t1
 P1	{1,0,1}	{0,1,1}	{0,0,1}
 P2	{1,1,0}	{1,0,0}	
 P3	{0,1,0}	{0,0,1}	
